updated system prompt to not mention "context includes"